--- a/templates/my_feeds.html
+++ b/templates/my_feeds.html
@@ -34,7 +34,10 @@
     </table>
 
     <!-- Add New Algo Button -->
-    <button class="btn btn-success mt-4" data-bs-toggle="modal" data-bs-target="#addAlgoModal">Add New Feed</button>
+    <div class="d-flex gap-2 mt-4">
+        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addAlgoModal">Add New Feed</button>
+        <a href="https://github.com/DGaffney/sky-feeder/blob/main/MANIFEST_DOC.md" target="_blank" class="btn btn-primary">Documentation</a>
+    </div>
 </div>
 
 <!-- Add Algo Modal -->
