--- a/templates/base.html
+++ b/templates/base.html
@@ -11,17 +11,15 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/codemirror.min.css">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Bluesky Timeline App">
-    <meta property="og:description" content="Summarize all links being shared on your Bluesky feed.">
-    <meta property="og:image" content="https://skyreader.cognitivesurpl.us/static/screenshot.png">
+    <meta property="og:title" content="Bluesky Feed Generator App">
+    <meta property="og:description" content="Generate arbitrarily complicated feed generators">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://skyreader.cognitivesurpl.us">
+    <meta property="og:url" content="https://hellofeed.cognitivesurpl.us">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Bluesky Timeline App">
-    <meta name="twitter:description" content="Summarize all links being shared on your Bluesky feed.">
-    <meta name="twitter:image" content="https://skyreader.cognitivesurpl.us/static/screenshot.png">
+    <meta name="twitter:title" content="Bluesky Feed Generator App">
+    <meta name="twitter:description" content="Generate arbitrarily complicated feed generators">
 </head>
 <body>
     <div class="container">
