--- a/templates/my_feeds.html
+++ b/templates/my_feeds.html
@@ -23,7 +23,7 @@
                     <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editAlgoModal" data-algo-id="{{ algo.id }}" data-algo-name="{{ algo.record_name }}" data-algo-display-name="{{ algo.display_name }}" data-algo-description="{{ algo.description }}">Edit</button>
 
                     <!-- Delete Button -->
-                    <form action="{{ url_for('delete_algo') }}" method="post" class="d-inline">
+                    <form action="/delete_algo" method="post" class="d-inline">
                         <input type="hidden" name="algo_id" value="{{ algo.id }}">
                         <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this algorithm?');">Delete</button>
                     </form>
@@ -44,7 +44,7 @@
 <div class="modal fade" id="addAlgoModal" tabindex="-1" aria-labelledby="addAlgoModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <form action="{{ url_for('add_algo') }}" method="post">
+            <form action="/add_algo" method="post">
                 <div class="modal-header">
                     <h5 class="modal-title" id="addAlgoModalLabel">Add New Feed</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -80,7 +80,7 @@
 <div class="modal fade" id="editAlgoModal" tabindex="-1" aria-labelledby="editAlgoModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <form action="{{ url_for('edit_algo') }}" method="post">
+            <form action="/edit_algo" method="post">
                 <input type="hidden" name="algo_id" id="editAlgoId">
                 <div class="modal-header">
                     <h5 class="modal-title" id="editAlgoModalLabel">Edit Feed</h5>
