--- a/templates/my_feeds.html
+++ b/templates/my_feeds.html
@@ -38,6 +38,8 @@
         <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addAlgoModal">Add New Feed</button>
         <a href="https://github.com/DGaffney/sky-feeder/blob/main/MANIFEST_DOC.md" target="_blank" class="btn btn-primary">Documentation</a>
         <a href="https://gist.github.com/DGaffney/8861e95530d39e506b9482b32396c3de" target="_blank" class="btn btn-primary">Collaborative Manifest Examples (Comment Yours!)</a>
+        <a href="https://github.com/DGaffney/sky-feeder" target="_blank" class="btn btn-primary">Source Code (OPEN A PR!)</a>
+        
         
     </div>
 </div>
